--- a/style.css
+++ b/style.css
@@ -1,134 +1,125 @@
-* {
-  font-family: rubik;
-  margin: 0;
-  padding: 0;
+*{
+	padding: 0;
+	margin: 0;
+	font-family: monospace, monaco;
 }
 
-body {
-  margin: auto;
+.container{
+	width: 720px;
+	margin: 20px auto;
+	box-sizing: border-box;
+	padding: 5px;
+	display: block;
 }
 
-img {
-  vertical-align: middle;
-  margin-left: 50%;
+.vid-container li{
+	list-style-type: none;
+	margin: auto;
+	padding: 0;
+	display: inline-block;
 }
 
-header {
-  background-color: #680105;
-  height: 110px;
-  position: relative;
+header{
+	background-color: #680105;
+	height: 56px;
+	padding: 10px;
+	display: flex;
 }
 
-.logo {
-  left: 24px;
-  display: inline-block;
+.logo{ 
+	width: 25px;
+	height: 25px;
+	margin: auto;
+	margin-bottom: 100px; 
+
 }
 
-.logo img {
-  margin-top: 24px;
-  margin-left: 24px;
-  left: 0;
-  height: 74px;
-  width: 196px;
+.logo img{
+	margin: 0;
+	height: 60px;
+	width: 150px;
 }
 
-.navbar {
-  padding: 24px;
-  margin-top: 10px;
-  display: inline-block;
-  justify-content: middle;
-  object-fit: cover;
-  position: absolute;
-  left: 27.5%;
+.find{
+	background-color: white;
+	margin: auto;
 }
 
-.login-on-top {
-  display: inline-block;
-  float: right;
-  padding: 15px 46px;
-  margin-top: 28px;
-  margin-right: 12px;
+.find input{
+	width: 522px;
+	height: 24px;
+	border: 2px solid #111;
 }
 
-input {
-  width: 522px;
-  height: 24px;
+
+.content{
+	background-color: #680105;
+	height: 320px;
+	padding: 50px;
+	flex: 1;
+	border-radius: 10px;
+} 
+
+.profile{
+	background-color: #ff7f00; 
+	width: 125px;
+	height: 25px;
+	padding: 10px;
+	margin: auto;
+	text-align: center;
+	border-radius: 10px;
 }
 
-.log-button {
-  border-radius: 10px;
-  background-color: #54be00;
-  padding: 12px 32px;
+.profile a{
+	text-decoration: none;
+	color: white;
 }
 
-.log-button a {
-  text-decoration: none;
-  color: white;
+.Menu-Navigasi{
+	padding: 10px;
+	width: 10px;
+	height: 10px;
+	margin: auto 10px;
+	margin-top: -2.5px;
 }
 
-.main {
-  border: 1px solid;
-  display: flex;
+
+footer{
+	background-color: #111;
+	padding: 50px 0;
 }
 
-.Floating-menu {
-  float: left;
-  margin: 8px;
+.vid-container{
+	height: auto;
+	background-color: #680105;
+	margin: 40px auto;
+	padding: 20px;
+	display: block;
+	border-radius: 8px;
 }
 
-.Floating-menu ul li {
-  border: 2px solid;
-  border-color: white;
-  padding: 45px 30px;
-  width: 120px;
-  border-radius: 10px;
-  background-color: #680105;
+.video{
+	width: 180px;
+	height: 140px;
+	padding: 8px;
+	border: 2px solid;
+	margin: 8px;
+	border-radius: 3px;
 }
 
-.Floating-menu ul li:hover {
-  background-color: red;
-}
-
-.Floating-menu ul li a {
-  text-align: center;
-  text-decoration: none;
-  color: white;
-}
-
-.Floating-menu img {
-  width: 196px;
-  height: 74px;
-}
-
-.content {
-  margin-left: 225px;
-  border: 1px solid;
-  margin-top: 10px;
-  margin-right: 10px;
-  background-color: #680105;
-  border-radius: 10px;
-  height: 460px;
-  width: 720px;
-}
 .mySlides {
-  display: none;
+	display: none;
 }
 
-img {
-  vertical-align: middle;
-}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 100%;
-  height: 320px;
+  margin: -60px -60px;
   position: relative;
-  margin: auto;
 }
 
 /* Next & previous buttons */
-.prev,
-.next {
+.prev, .next {
   cursor: pointer;
   position: absolute;
   top: 60%;
@@ -141,7 +132,7 @@ img {
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
-  height: 80px;
+  height: 30px;
 }
 
 /* Position the "next button" to the right */
@@ -151,9 +142,8 @@ img {
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
 }
 
 /* Caption text */
@@ -176,11 +166,13 @@ img {
   top: 0;
 }
 
-.mySlides img {
-  margin-top: 18px;
-  border-radius: 10px;
-  height: 420px;
-  margin-left: 24px;
+.mySlides img{
+	margin-top: 18px;
+	border-radius: 10px;
+  	height: 420px;
+  	margin-left: 24px;
+  	width: 677px;
+	vertical-align: middle;
 }
 
 /* The dots/bullets/indicators */
@@ -188,15 +180,15 @@ img {
   cursor: pointer;
   height: 15px;
   width: 15px;
-  margin: 0 2px;
+  margin: 10px 2px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+
 }
 
-.active,
-.dot:hover {
+.active, .dot:hover {
   background-color: #717171;
 }
 
@@ -209,53 +201,177 @@ img {
 }
 
 @-webkit-keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 @keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .prev,
-  .next,
-  .text {
-    font-size: 11px;
-  }
+  .prev, .next,.text {font-size: 11px}
 }
 
-.story {
-  border: 1px solid;
-  margin-top: 32px;
-  margin-left: 225px;
-  background-color: #680105;
-  border-radius: 10px;
-  margin-right: 8px;
-  height: 140px;
-  width: 720px;
+h1{
+	padding: 13px;
+	background-color: red;
+	opacity: 0.9;
+	border-radius: 10px;
+	position: relative;
+	margin-left: -15px; 
+	margin-top: -8px;
 }
 
-.img-story {
-  border: 1px solid;
+.text{
+	padding: 13px;
+	background-color: red;
+	opacity: 0.9;
+	display: block;
+	width: auto;
+	border-radius: 10px;
+}
+
+.Menu-Navigasi {
+  position: relative;
   display: inline-block;
-  border-radius: 50%;
-  padding: 49px;
-  margin: 8px;
 }
 
-h1 {
-  -webkit-text-stroke: 0.5px black;
-  margin-top: 23px;
-  margin-left: 25px;
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
 }
+
+.sidenav a {
+  padding: 8px 18px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav img{
+	margin-top: 120px; 
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+.vid-box{
+	margin: auto;
+	background-color: white;
+	height: 140px;
+}
+
+.judul-profile{
+	position: relative;
+	display: flex;
+	margin-top: -40px;
+}
+
+.profile-img{
+	padding: 12px;
+	border: 2px solid;
+	position: relative;
+	border-radius: 50%;
+}
+
+.judul-profile a{
+	text-decoration: none; 
+	width: 120px;
+	color: black;
+}
+
+.login-container{
+	height: 500px;
+	width: 500px;
+	margin:50px auto;
+	background-color: #680105;
+	border-radius: 10px;
+	padding: 20px;
+}
+
+form {
+	width: 500px;
+}
+
+.log-container input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #ff7f00;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.cancelbtn {
+  width: 300px;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+img.avatar {
+  width: 40%;
+}
+
+.log-container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+
+
