--- a/style.css
+++ b/style.css
@@ -322,6 +322,7 @@ form {
 
 .log-container input[type=text], input[type=password] {
   width: 100%;
+  height: auto;
   padding: 12px 20px;
   margin: 8px 0;
   display: block;
@@ -372,6 +373,4 @@ span.psw {
   span.psw {
      display: block;
      float: none;
-  }
-
-
+}
